--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nuxt"
+    "dev": "nuxt",
+    "start": "nuxt start",
+    "build": "nuxt build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "cookieparser": "^0.1.0",
+    "dayjs": "^1.10.5",
+    "js-cookie": "^2.2.1",
+    "markdown-it": "^12.0.6",
     "nuxt": "^2.15.6"
   }
 }
